--- a/gb/23/9/4/n14066511.md
+++ b/gb/23/9/4/n14066511.md
@@ -18,6 +18,7 @@
 <p>“你们好！”胡管儿说，“你们别见怪，太正常了。不少人出来，见了警察就蹲下抱头呢！这儿，犯人没尊严，像方明这样精神没垮的，那就是好样的！”管教这么一解释，我心里还算舒服一点儿。</p>
 <p>真没想到，中共的整人的机制这么强大，四个月，就把我改造了。</p>
 <p>胡管儿没敢多扯，寒暄两句，就依照“道儿上”的规矩，跟我互道珍重，不道别而别。</p>
+<p style="text-align: center;">§</p>
 <p>杜律师让萍萍先把她送医院，原来她上个月被律师所解聘了，她和她男朋友还遭劫了，她男朋友被蒙面人打成重伤，半个月了，还没苏醒呢。凶手也不抢东西，上来就打。</p>
 <p>她说，自从因为我的案子，她和刘预审闹翻后，姓刘的就威胁她的律师所，然后她就真把姓刘的给告了，随后她就遭了毒手。现在虽然报案了，但是现场没证据、没线索，没用。怨不得我求见律师都见不成呢！</p>
 <p>我不解地问：“为什么不抓姓刘的？不是怀疑就能拘留逮捕吗？”</p>
@@ -28,7 +29,6 @@
 <p>打完电话，我开开玩笑缓解气氛：“萍萍，我坐牢这四个月，可一直在给你打工啊。”</p>
 <p>“啊？”萍萍没反应过来。</p>
 <p>“我可是竭尽全力给你套‘情报’啊，几十套呢，都是你可能永远也看不到的真东西。要是不坐牢，真不知道什么叫中国的‘地狱’。”</p>
-<p style="text-align: center;">§</p>
 <p>母亲苍老了许多，还大病一场，刚出院不久。现在还心律不齐、血压高。我安慰了母亲半天，然后石破天惊地道出了一句：“妈，你这身体，炼法轮功吧，保证你啥毛病都没有！”</p>
 <p>看母亲很诧异，我解释了半天。最后还是小龙炼功神奇康复的例子打动了她。母亲胆小怕事，不敢找邻居——这楼里就有人炼，萍萍出主意找她二姐。</p>
 <p>来电话了，我拿起听筒，听见“啪哒”一声微响，然后才传来妻子的声音——电话被监听了！这可是“国际刑警”老林教我的：所有的海外电话都被监听录音——那是总参二部的常规任务。那种监听是基底层的，接电话时没什么反应；而现在的“啪哒”声，表明除了常规的监听，又有不同系统的特务插手监听我了——取保候审，还要这样吗？对了，老林还说过，所有来中国的西方人，都有安全局二十四小时秘密监视着，监视的力度因人而异。</p>
@@ -39,7 +39,6 @@
 <p>洪霞说杨义拘留前，就用预审的电话要她给预审“表示表示”，并且不准她给我打电话。洪霞竟然就在海淀看守所外边办公楼的审讯室里，在小王被支出去后，塞给姓刘的一万现金！预审找她问了份口供，就滞留了她，然后抓我，审完我，就放了洪霞。</p>
 <p>姓刘的收了洪霞一万，所以要狠整我，让我替杨义扛罪。我当时又自以为是“法人”，正好被姓刘的利用来办大案，逼我供认不讳，充当案头。</p>
 <p>我告诉她，我已经花钱把杨义调到外籍号儿当二板儿了，不久杨义就能当牢头了。</p>
-<p style="text-align: center;">§</p>
 <p>在医院见到了杜红，也看到了她那位一直昏睡的将成为植物人的男朋友，我真是无话可说了。这个刚毕业的法律研究生，不谙世道，跟预审死磕，结果被一手遮天的小预审整得被律师所解聘、男朋友被打成重伤。虽然，这些都不是我的责任，可是毕竟因我而起啊。</p>
 <p>我塞给她一万元——杯水车薪，在这昂贵的医院里支撑不了几天。这钱还是我向母亲借的，我目前在国内的现金，为还人情债已经花的差不多了。</p>
 <p>“到美国发展吧，凭你的才华，肯定大有作为，在中国，你奋斗一生，能挣下个什么？三分之二的血汗都被党剥夺走了……”杜红笑笑，说：“律师这一行，在中国就是正义者的地狱。”</p>
@@ -64,40 +63,38 @@
 <p><em>点阅【<span style="color: #000080;"><a style="color: #000080;" href="https://github.com/1992513/djy/blob/master/gb/tag/北京逃生记.md#1">北京逃生记</a></span>】系列文章</em></p>
 <p>责任编辑：杨丽海</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/4/n14066528.md#1">北京逃生记(86) 昂贵的自由——潜逃惊魂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/4/n14066490.md#1">北京逃生记(84) 昂贵的自由——取保候审</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/3/n14066465.md#1">北京逃生记(83) 昂贵的自由——最后一课</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/3/n14066454.md#1">北京逃生记(82) 昂贵的自由——堂皇的讹诈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/3/n14066446.md#1">北京逃生记(81) 昂贵的自由——完美脱逃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/3/n14066417.md#1">北京逃生记(80) 昂贵的自由——厕所人权秀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/28/n14062325.md#1">北京逃生记(79) 恐怖的监狱医院——预言成真</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/28/n14062316.md#1">北京逃生记(78) 恐怖的监狱医院——尼禄重生 千年见证</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/28/n14062306.md#1">北京逃生记(77) 恐怖的监狱医院——“六字真言” 无敌宝鉴</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/28/n11751711.md#1" target="_blank">张林：青少年被迫加入抗美援朝志愿军</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">我的父亲</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/5/n10029772.md#1" target="_blank">林辉：中共翻云覆雨 齐白石去世后被打倒</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312505.md#1">【未解之谜】美国牧师濒死 惊见撒旦控制人类计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308151.md#1">香港凉茶趣谈：凉茶不“凉” 龟苓膏最初功用非“清热解毒”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14311467.md#1">巴西空难前一天 灵媒直播预言：我看到坠机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310266.md#1">黄历七月半盂兰盆会 怎样才得以“超度”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314595.md#1">【中国禁闻】中共称台独可处死刑 台商急逃亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314598.md#1">【全球新闻】辽宁特大洪灾 多村失联</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314165.md#1">【军事热点】乌军成功不以占领领土多少衡量</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313413.md#1">震惊全网 北京211大学毕业女生死在出租屋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313544.md#1">北戴河会议后中共党魁首露面 官媒报导异常</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313394.md#1">李佩霞被“双开” 毛奇曾说她不死也要掉层皮</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313950.md#1">进军大银幕票房翻车 张若昀被劝回去拍剧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314684.md#1">成本超2亿 新版《红楼梦》上映5天票房450万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314301.md#1">新《超人》5个月拍完 为保视觉品质后制需1年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313177.md#1">乔治克隆尼：亚马逊和沃尔玛正在蚕食好莱坞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313732.md#1">田中千绘拿到居留证 爱卤肉饭返日待不了一周</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313638.md#1">除了东京之外 日本这6个地方也值得一游</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313229.md#1">蔬果怎么洗才安全？ 微生物学家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14312095.md#1">日本专家：年过六十 小心五种错误保健方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313114.md#1">别忽视心脏病早期微妙症状 哈佛：预防五步骤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314281.md#1">不用冰箱 用这招可让番茄存放久一点</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545549.md#1">【军事情报局】美对台军售大升级 或逾200亿美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545000.md#1">【新闻大家谈】八炯：亲历统战 台湾需守住防线</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/4/n14066511.htm">北京逃生记(85) 昂贵的自由——负债累累</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/9/4/n14066511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
